# EHIS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.product.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 047b2227cbae_add_cccd_id_and_residence_columns_to_.py  22cf04900afb_create_medical_record_doctor_table.py  3d631bc0565f_add_image_column_to_user_table.py  3f624078474e_add_clinic_location_field_to_user_table.py  47ae6b76f7d9_add_medical_record_column_to_.py  5e9dcc8c3644_add_department_field_to_user_table.py  636af6632b1d_add_otp_column_to_user_table.py  63cd3c969649_update_dob_table_user.py  77a576a00220_add_avatar_url_field_to_user_table.py  81b659423331_alter_payment_table_to_allow_null_and_.py  92a7fb9032c9_create_payment_table.py  a922dab39786_create_medical_record_table.py  c4af632d1f6b_create_superuser.py  d7cb6b4fe146_create_user_table.py  ddd93d2eb558_create_appointment_table.py  e9374e8e594f_update_type_cccd_id_columns_to_user_.py  eadc65a30bc5_add_embedding_column_to_user_table.py  fca6e93efce5_create_lab_test_table.py
app/: main.py
app/celery/: __init__.py  celery_app.py
app/constant/: __init__.py  app_status.py  auth_constants.py  department_constant.py  gender_constant.py  notification_constants.py  payment_status.py  role_constant.py  status_appointment_enum.py
app/core/: settings.py
app/cruds/: __init__.py  appointment_crud.py  base_crud.py  doctor_crud.py  lab_test_crud.py  medical_record_crud.py  medical_record_doctor_crud.py  patient_crud.py  payment_crud.py  receptionist_crud.py  (+1 more)
(+63 files in other folders)
