[tool.poetry]
name = "HIS-BE"
version = "0.1.0"
description = ""
authors = ["Doan Tien Loi <doantienloi123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# be
python = "^3.10.9"
alembic = "1.11.3"
fastapi = "0.99.1"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"
sse-starlette = "1.6.5"
Unidecode = "^1.3.8"
celery = "^5.2.0"
pymongo = "^4.8.0"
pusher = "^3.3.2"
redis = "^5.0.7"
flower = "^2.0.1"
easyocr = "^1.7.1"
pillow = "^10.3.0"
pyzbar = "^0.1.9"
boto3 = "^1.35.82"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
